--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <h2 class="title2">Nuestros objetivos</h2>
 
           <p>
-            
+            En el curso de "Diseño de Software", estamos creando una página web con un 								doble propósito. Queremos demostrar sólidamente los principios del diseño de 							software al hacer que la página sea funcional y visualmente atractiva. 										Nuestra meta es mostrar cómo la combinación de elementos visuales y 											funcionales puede resultar en una solución informática completa y eficaz. Al 							trabajar en equipo, planeando cuidadosamente y ejecutando con precisión, 									buscamos superar expectativas y contribuir al avance en el campo del diseño 							de software.
           </p>
         </div>
       </section>
