--- a/miembro1.html
+++ b/miembro1.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,700;1,400&display=swap" rel="stylesheet">
   
-    <title>Sebastián Barthou</title>
+    <title>Nicolás Durán</title>
 </head>
 <body>
     <h1 class="title">Nicolás Durán</h1>
@@ -22,9 +22,14 @@
       </nav>
     </div>
 
-    <section class="miembro2">
-      <h2>Un poco sobre mi</h2>
-
+    <section class="nico">
+      <h2>Un poco sobre mi</h1>
       <p>Mi nombre es Nicolás Durán, tengo 25 años y me encuentro estudiando Ingeniería Civil Informática en la Universidad Adolfo Ibáñez.</p>
       <p>Algunas cosas que me gustan hacer son pasar tiempo con mi perro, salir a jugar básquetbol con mis amigos o hacer trekking.</p>
-    </section>
+      </section>
+
+    <footer class="footer-miembro2">
+      <p>Contacto: <a href="mailto:niduran@alumnos.uai.cl">niduran@alumnos.uai.cl</a></p>
+    </footer>
+</body>
+</html>
