--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="team-description">
           <h2 class="title2">¿Quienes somos?</h2>
           <p>
-            ¡Hola! Somos un equipo de trabajo que estará aprendiendo habilidades
+            ¡Hola! Somos el grupo 23 del ramo de diseño de software en la Universidad Adolfo Ibañez, un equipo de trabajo que estará aprendiendo habilidades
             para desarrollar páginas web. <br />
             En esta primera entrega utlizamos HTML y CSS para dar formato y
             estilo a nuestra página de equipo.
